package com.datamasters.modelo;

public class CustomerList {
}
