package com.datamasters.modelo;

public class Data {
}
